# leutner-meter

./: README.md  api.txt
.github/workflows/: pi_build.yml
backend/: Cargo.toml  Rocket.toml  TODO  db.py  main.py
backend/.cargo/: config.toml
backend/migrations/2021-09-29-175254_create_tables/: down.sql
backend/migrations/2021-09-30-012509_tickets/: up.sql
backend/src/: main.rs  models.rs  schema.rs
backend/static/: global.css
frontend/: package-lock.json  package.json  rollup.config.js  tsconfig.json
frontend/public/: global.css  index.html
frontend/src/: App.svelte  CurrentMeal.svelte  Gauge.svelte  Header.svelte  Loader.svelte  Score.svelte  VotingForm.svelte
py-backend/: meals.py
rust-backend/: Cargo.toml
rust-backend/migrations/2021-09-29-175254_create_tables/: up.sql
rust-backend/src/: main.rs  models.rs  schema.rs
